--- a/css/fontello.css
+++ b/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?52008730');
-  src: url('../font/fontello.eot?52008730#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?52008730') format('woff2'),
-       url('../font/fontello.woff?52008730') format('woff'),
-       url('../font/fontello.ttf?52008730') format('truetype'),
-       url('../font/fontello.svg?52008730#fontello') format('svg');
+  src: url('../font/fontello.eot?9547741');
+  src: url('../font/fontello.eot?9547741#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?9547741') format('woff2'),
+       url('../font/fontello.woff?9547741') format('woff'),
+       url('../font/fontello.ttf?9547741') format('truetype'),
+       url('../font/fontello.svg?9547741#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?52008730#fontello') format('svg');
+    src: url('../font/fontello.svg?9547741#fontello') format('svg');
   }
 }
 */
@@ -54,9 +54,10 @@
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
 
-.icon-female:before { content: '\e800'; } /* '' */
+.icon-sun:before { content: '\e800'; } /* '' */
 .icon-github-text:before { content: '\e802'; } /* '' */
-.icon-male-1:before { content: '\e805'; } /* '' */
 .icon-facebook-1:before { content: '\f09a'; } /* '' */
+.icon-moon:before { content: '\f186'; } /* '' */
+.icon-snowflake-o:before { content: '\f2dc'; } /* '' */
 .icon-youtube:before { content: '\f313'; } /* '' */
 .icon-linkedin-1:before { content: '\f318'; } /* '' */
